--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -11,19 +11,25 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="static/favicon.ico">
+    <link rel="shortcut icon" href="static/favicon.png">
     <link rel="stylesheet" href="static/css/main.css">
 </head>
-<body>
-
-<header class="head">
+<body ng-app="aatApp">
+<div ng-controller="aatController">
+    <header class="head">
     <div class="wrapper">
+        <div class="language">
+            <div class="selected" language>English</div>
+            <!--<ul class="list">-->
+                <!--<li class="item"><a href="" class="link">German</a></li>-->
+            <!--</ul>-->
+        </div>
         <a href="./" class="logo">
             <img
                 class=""
                 width="294"
                 height="143"
-                src="static/images/aat-reinigung-logo.png"
+                src="static/images/aat-reinigung-logo@2x.png"
                 alt="AAT Reinigung &amp; Hauswartung">
         </a>
         <menu class="menu">
@@ -78,7 +84,7 @@
     </div>
 </header>
 
-<main class="main">
+    <main class="main">
     <div class="wrapper">
         <section id="office-clean">
             <article class="item">
@@ -89,37 +95,40 @@
                 </div>
             </article>
             <figure class="gallery">
-                <img
-                    class="picture"
-                    width=""
-                    height=""
-                    src="static/images/lobby/lobby-1.jpg"
-                    alt="">
-                <img
-                    class="picture"
-                    width=""
-                    height=""
-                    src="static/images/lobby/lobby-2.jpg"
-                    alt="">
-                <img
-                    class="picture"
-                    width=""
-                    height=""
-                    src="static/images/lobby/lobby-3.jpg"
-                    alt="">
-                <img
-                    class="picture"
-                    width=""
-                    height=""
-                    src="static/images/lobby/lobby-5.jpg"
-                    alt="">
-                <img
-                    class="picture"
-                    width=""
-                    height=""
-                    src="static/images/lobby/lobby-4.jpg"
-                    alt="">
-
+                <a  class="gallery-item"
+                    ng-click="showGalleryTop()"
+                    href="javascript:;">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/lobby-1.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/lobby-2.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/lobby-3.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/lobby-5.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/lobby-4.jpg"
+                        alt="">
+                </a>
                 <!--<figcaption></figcaption>-->
             </figure>
         </section>
@@ -147,6 +156,42 @@
                     <p>We clean your private apartment as conscientiously as if it were our own. We are also pleased to meet special requirements by appointment.</p>
                 </div>
             </article>
+            <figure class="gallery">
+                <a  class="gallery-item"
+                    ng-click="showGalleryBottom()"
+                    href="javascript:;">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/Layer-6.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/Layer-7.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/Layer-8.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/Layer-9.jpg"
+                        alt="">
+                    <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/Layer-10.jpg"
+                        alt="">
+                </a>
+            </figure>
         </section>
         <section id="property-clean">
             <article class="item">
@@ -173,7 +218,9 @@
             <h3 class="custom-title"><span class="text">Contact us</span></h3>
             <div class="row">
                 <div class="col-m6 col-s12 col">
-                    <form action="">
+                    <form ng-submit="requestForm.$valid"
+                          name="requestForm"
+                          novalidate>
                         <div class="description">
                             <p>Have we piqued your interest? We are looking forward to your call
                                 at 079 377 57 52 or your e-mail at b.arifi@aat-reinigung.ch.
@@ -181,22 +228,29 @@
                                 as soon as possible.
                             </p>
                         </div>
-                        <input
+
+                        <div>
+                            <input
                             class="custom-input"
                             type="text"
                             name="name"
                             placeholder="First Name / Second Name"
                             required>
+                            <div ng-cloak
+                                 class="error"
+                                 ng-show="requestForm.name.$invalid && requestForm.$submitted">This field is required</div>
+                        </div>
+
                         <input
                             class="custom-input"
                             type="email"
                             name="email"
-                            placeholder="email ex.g">
+                            placeholder="e.g. email">
                         <input
                             class="custom-input"
                             type="tel"
                             name="tel"
-                            placeholder="phone number ex ">
+                            placeholder="e.g. phone number">
                         <button
                             type="submit"
                             class="button">
@@ -211,6 +265,7 @@
                         itemscope
                         itemtype="http://schema.org/Organization">
                         <p class="text">Call or Email us:</p>
+                        <i class="tel-icon">&nbsp;</i>
                         <a
                             class="tel"
                             itemprop="telephone"
@@ -269,18 +324,103 @@
     </section>
 </main>
 
-<footer>
+    <footer>
     <div class="wrapper">
          <a href="./" class="logo">
             <img
                 width="152"
                 height="74"
-                src="static/images/aat-reinigung-logo-small.png"
+                src="static/images/aat-reinigung-logo-small@2x.png"
                 alt="AAT Reinigung &amp; Hauswartung">
         </a>
         <p class="copyright">&copy;	Website copyright 2016</p>
     </div>
 </footer>
+</div>
+
+<script type="text/ng-template" id="galleryTop.html">
+    <div
+        class="modal-container"
+        carousel-navigation>
+        <div
+            class="close-btn"
+            ng-click="closeDialog()">&#10005;</div>
+        <div uib-carousel
+             ng-cloak>
+            <div uib-slide index="0">
+                <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/big-lobby-1.jpg"
+                        alt="">
+            </div>
+            <div uib-slide index="1">
+                <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/big-lobby-2.jpg"
+                        alt="">
+            </div>
+            <div uib-slide index="2">
+                <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/big-lobby-3.jpg"
+                        alt="">
+            </div>
+        </div>
+    </div>
+</script>
+<script type="text/ng-template" id="galleryBottom.html">
+    <div
+        class="modal-container"
+        carousel-navigation>
+        <div
+            class="close-btn"
+            ng-click="closeDialog()">&#10005;</div>
+        <div uib-carousel
+             ng-cloak>
+            <div uib-slide index="0">
+                <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/big-lobby-4.jpg"
+                        alt="">
+            </div>
+            <div uib-slide index="1">
+                <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/big-lobby-5.jpg"
+                        alt="">
+            </div>
+            <div uib-slide index="2">
+                <img
+                        class="picture"
+                        width=""
+                        height=""
+                        src="static/images/lobby/big-lobby-6.jpg"
+                        alt="">
+            </div>
+        </div>
+    </div>
+</script>
+
+
+<script src="static/bower_components/angular.js"></script>
+<script src="static/bower_components/angular-animate.js"></script>
+<script src="static/bower_components/ui-bootstrap-tpls.js"></script>
+<!--<script src="static/bower_components/angular-sanitize.js"></script>-->
+<script src="static/js/angular/apps/aat.app.js"></script>
+<!--<script src="static/js/angular/directives/language.js"></script>-->
+<!--<script src="static/js/angular/directives/carousel-keyboard-navigation.js"></script>-->
+
+<script src="static/js/angular/ctrls/aat.ctrl.js"></script>
 
 </body>
 </html>
